# django-boilerplate

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/apps/: conftest.py  settings.py  urls.py
core/apps/accounts/: admin.py  apps.py  forms.py  models.py  settings.py  signals.py  tests.py  urls.py  views.py
core/apps/accounts/migrations/: 0001_initial.py
core/apps/accounts/templates/: login.html  profile.html  register.html  register_user.html
core/apps/accounts/templates/accounts/: home.html  profile.html
core/apps/accounts/templates/partials/: field.html
core/apps/accounts/templates/registration/: activate_account_done.html  activate_account_waiting.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  sign_up.html
core/apps/accounts/tests/: test_accounts.py  test_login_form.py  test_register_form.py
core/apps/accounts/tests/fixtures/: __init__.py  accounts.py
core/apps/accounts2/: apps.py  backends.py  decorators.py  forms.py  models.py  settings.py  signals.py  urls.py  views.py
core/apps/accounts2/migrations/: 0001_initial.py
core/apps/accounts2/templates/accounts2/: home.html  profile.html
core/apps/accounts2/templates/registration/: activate_account_email.html  login.html  password_change_done.html  password_change_form.html  password_reset_done.html  password_reset_form.html  sign_up.html
core/apps/accounts2/tests/: test_accounts2.py
core/apps/accounts2/tests/fixtures/: __init__.py  accounts2.py
core/apps/articles/: admin.py  models.py  urls.py  views.py
core/apps/articles/migrations/: 0001_initial.py
core/apps/screener/: apps.py  filters.py  models.py  settings.py  tables.py  urls.py  views.py
core/apps/screener/migrations/: 0001_initial.py
core/apps/screener/templates/products/: base.html  product_table_htmx.html  (+1 more)
core/apps/templates/: base.html
core/apps/templates/articles/: home.html
core/apps/templates/partials/: messaging.html  navbar.html
core/general/tests/fixtures/: __init__.py  misc.py
core/general/utils/: pytest.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  db.py  envvars.py  logging.py  rest.py
core/project/settings/templates/: settings.dev.py
core/project/settings/utils/: collections.py  misc.py  settings.py
core/static/: styles.css
local/: settings.dev.py
scripts/: create_invite.py  create_user.py  entrypoint.sh  send_email.py
(+5 files in other folders)
