[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["Craig Carey <sgccarey@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.1"
django-split-settings = "^1.2.0"
pyyaml = "^6.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
psycopg2 = "^2.9.6"
pytest = "^7.3.1"
pytest-xdist = "^3.3.1"
pytest-django = "^4.5.2"
model-bakery = "^1.11.0"
freezegun = "^1.2.2"
django-tables2 = "^2.6.0"
django-filter = "^23.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
colorlog = "^6.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
